<resources>
    <drawable name="grey">#cccccc</drawable>
    <string name="app_name">Attendance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="gallery">map</string>
    <string name="menu_home">Home</string>
    <string name="menu_Attendance">Điểm Danh</string>
    <string name="menu_Calendar">Lịch</string>
    <string name="menu_statistic">Thống kê</string>
    <string name="menu_Information">Thông tin</string>
    <string name="menu_AlterPass">Đổi mật khẩu</string>
    <string name="menu_Exit">Thoát</string>
    <string name="edit_btn">Sửa</string>
    <string name="delete_btn">Xóa</string>
</resources>
